--- a/index.html
+++ b/index.html
@@ -27,6 +27,42 @@ tr:nth-child(even) {
 </style>
 </head><!--Cuerpo del documento-->
 <body bgcolor="#FEFEFE">
+
+
+
+
+
+
+
+
+https://www.w3schools.com/html/default.asp
+
+
+
+
+
+
+
+
+
+
+Name: <input type="text" id="myText" value="Mickey">
+
+<p>Click the button to change the value of the text field.</p>
+
+<button onclick="myFunction()">Try it</button>
+
+<script>
+function myFunction() {
+  document.getElementById("myText").value = "Johnny Bravo";
+}
+</script>
+
+
+
+
+
+
 <table width="630" border="0">
 <tr>
 <td valign="top" width="70"><a href="index.html"><img src="graficos/logo.jpg" border="0"></a></td><td valign="top" width="590"><font face="Arial,Helvetica,sans-serif"><font size="+3" color="#005CA0"><b>1. Introducci&oacute;n al curso</b></font>
