--- a/finalOK.html
+++ b/finalOK.html
@@ -36,15 +36,44 @@ tr:nth-child(even) {
 <td valign="top" width="40"><a href="index.html"><img src="graficos/prestasmoConfiableogo02.png" border="0">
 </a></td><td valign="top" width="390"><font face="Arial,Helvetica,sans-serif"><font size="+3" color="#005CA0">
 <br>
-<b>Financiacion directa sin depender de estudios de credito bancario</b></font>
+<b>finalOK</b></font>
    
 <br><br>
-<a name="1"></a><font size="+2" color="#005CA0">Gracias por su interes</font>
 
+
+
+<a name="1"></a><font size="+2" color="#005CA0">Contacto</font>
+      <p>En momentos lo estaremos contactando. Muchas gracias por su interes en Prestamo Confiable</p>
+<br>
+
+
+<br>
 </table>
 
 
+<h2>Acceso directo a asesor</h2>
+
+<table>
+  <tr>
+    <td>Contacto</td>
+    <td>Oscar Ardila</td>
+  </tr>
+  <tr>
+    <td>Ubicacion</td>
+    <td>Carrera 27 46 55 Bogota</td>
+  </tr>
+  <tr>
+    <td>Telefono</td>
+    <td>318-3121344</td>
+  </tr>
+  <tr>
+    <th>URL</th>
+    <th>https://oardilaaucentral.github.io/PrestamoConfiable/</th>
+  </tr>
 </table>
+
+
+
 
 </body>
 </html>
