--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><!--Este documento ha sido generado con XT, de James Clark-->
 <html>
 <head>
-<title>Curso de HTML: Introducci&oacute;n al curso</title>
+<title>Prestamo Confiable</title>
 <SCRIPT LANGUAGE="Javascript" TYPE="text/javascript">
     function averiguarNavegador() {
       document.formulario.navegador.value =
@@ -9,10 +9,12 @@
     }
     </SCRIPT>
 	<style>
+	
+	
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 100%;
+  width: 70%;
 }
 
 td, th {
@@ -35,289 +37,53 @@ tr:nth-child(even) {
 
 
 
-https://www.w3schools.com/html/default.asp
 
 
-
-
-
-
-
-
-
-
-Name: <input type="text" id="myText" value="Mickey">
-
-<p>Click the button to change the value of the text field.</p>
-
-<button onclick="myFunction()">Try it</button>
-
-<script>
-function myFunction() {
-  document.getElementById("myText").value = "Johnny Bravo";
-}
-</script>
-
-
-
-
-
-
-<table width="630" border="0">
+<table width="430" border="0">
 <tr>
-<td valign="top" width="70"><a href="index.html"><img src="graficos/logo.jpg" border="0"></a></td><td valign="top" width="590"><font face="Arial,Helvetica,sans-serif"><font size="+3" color="#005CA0"><b>1. Introducci&oacute;n al curso</b></font>
-      <p>Este curso ha nacido con la intenci&oacute;n de complementar los
-      anteriores cursos de JavaScript y HTML din&aacute;mico que tengo en estas
-      p&aacute;ginas. As&iacute; podr&aacute;s terminar creando una p&aacute;gina de
-      calidad empezando desde cero.</p>
-      <p>Lo primero que hay que decir es que este curso no explica
-      ning&uacute;n est&aacute;ndar espec&iacute;fico, ni examina exaustivamente
-      todos los par&aacute;metros de las etiquetas HTML. Intenta ser una
-      gu&iacute;a pr&aacute;ctica, de modo que incluir&aacute; todas las cosas
-      que yo crea importantes y que me han provocado alg&uacute;n quebradero de
-      cabeza mientras realizaba mis p&aacute;ginas.</p>
-      <p>El curso y sus ejemplos los he probado con Explorer 4 y Netscape 4,
-      que son los navegadores que tengo instalados. Si tienes otro navegador y
-      encuentras alg&uacute;n problema te ruego que me lo
-      <a href="mailto:multivac@idecnet.com">comuniques</a>, ya que he renunciado a hacer un
-      dise&ntilde;o m&aacute;s elaborado para conseguir que todos puedan leer
-      este curso (y para terminarlo m&aacute;s r&aacute;pido).</p>
-      <p>Si tu navegador es capaz de manejar m&aacute;s de una ventana a la vez,
-      las p&aacute;ginas de ejemplo del curso se ver&aacute;n en otra ventana
-      (s&oacute;lo una). De este modo es posible observar a la vez el ejemplo y la
-      explicaci&oacute;n y se evita la proliferaci&oacute;n excesiva de ventanas.</p>
-    <br>
+<td valign="top" width="40"><a href="index.html"><img src="graficos/prestasmoConfiableogo02.png" border="0">
+</a></td><td valign="top" width="390"><font face="Arial,Helvetica,sans-serif"><font size="+3" color="#005CA0">
+<br>
+<b>Financiacion directa sin depender de estudios de credito bancario</b></font>
+   
+<br><br>
+<a name="1"></a><font size="+2" color="#005CA0">Mision</font>
+      <p>Somos una organizacion que facilita el acceso al credito extrabancario a nuestros clientes, creando relaciones de confianza y respeto en todo el proceso.</p>
+<br><br>
+<a name="1"></a><font size="+2" color="#005CA0">Vision</font>
+      <p>Ser una compañía que resuelve las necesidades financieras de nuestros clientes, soportada en la mejor experiencia digital, con asitencia personal en su formalizacion que permita agilizar los flujos de efectivo</p>
+<br><br>
+<a name="1"></a><font size="+2" color="#005CA0">Valores</font>
+      <p>Garantizamos Confiabilidad empresarial durante todo el proceso, sustento en procesos totalmente legales y reserva de la informacion obtenida</p>
+
+<FORM ACTION="" METHOD="POST" onSubmit="">
+<font size="+3">
+<a class="w3-left w3-btn" href="gracias.html">❮ Gracias</a>
+<a class="w3-right w3-btn" href="demografico.html">Me interesa ❯</a>
+</font">
+</FORM>
 <br>
-<a name="1"></a><font size="+2" color="#005CA0">1.1. Requisitos</font>
-      <p>Si est&aacute;s viendo este curso ya tienes en tus manos el requisito
-      m&aacute;s dif&iacute;cil de cumplir: tener acceso a Internet y un navegador.
-      El otro requisito es un editor de textos con el que hacer las p&aacute;ginas.
-      Da lo mismo cual. Para hacer este curso yo utilizo el de MS-DOS, por ejemplo.
-      Sin embargo, es posible entender el curso sin hacer una sola p&aacute;gina,
-      aunque siempre es recomendable practicar.</p>
-      <p>Pod&eacute;is hacer p&aacute;ginas con alg&uacute;n editor
-      espec&iacute;fico de p&aacute;ginas web, pero no es necesario. Es m&aacute;s,
-      algunos de esos editores esconden las etiquetas HTML al usuario, de modo
-      que posiblemente lo que aprendas aqu&iacute; te ser&iacute;a de poca utilidad.</p>
-    <br>
-<br>
-<a name="2"></a><font size="+2" color="#005CA0">1.2. &Iacute;ndice del curso</font>
-<p>1. <a href="index.html">Introducci&oacute;n</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">1.1. <a href="index.html#1">Requisitos</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">1.2. <a href="index.html#2">&Iacute;ndice del curso</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">1.3. <a href="index.html#3">Agradecimientos</a></font>
-<br>2. <a href="versiones.html">Versiones de HTML</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">2.1. <a href="versiones.html#1">HTML 2.0</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">2.2. <a href="versiones.html#2">HTML 3.0 y 3.2</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">2.3. <a href="versiones.html#3">HTML 4.0</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">2.4. <a href="versiones.html#4">Est&aacute;ndares en este curso</a></font>
-<br>3. <a href="primera.html">Mi primera p&aacute;gina</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">3.1. <a href="primera.html#1">El c&oacute;digo</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">3.2. <a href="primera.html#2">La explicaci&oacute;n</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">3.3. <a href="primera.html#3">El cuerpo del documento</a></font>
-<br>4. <a href="texto20.html">Formateo b&aacute;sico</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">4.1. <a href="texto20.html#1">Formato del p&aacute;rrafo</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">4.2. <a href="texto20.html#2">Las 6 cabeceras</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">4.3. <a href="texto20.html#3">Cambiando el tipo de letra</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">4.4. <a href="texto20.html#4">Formato de frase</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">4.5. <a href="texto20.html#5">Otros elementos</a></font>
-<br>5. <a href="caracteres.html">Caracteres especiales</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">5.1. <a href="caracteres.html#1">Caracteres extendidos en HTML</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">5.2. <a href="caracteres.html#2">Caracteres de control</a></font>
-<br>6. <a href="enlaces.html">Enlaces</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">6.1. <a href="enlaces.html#1">La etiqueta &lt;A&gt;</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">6.2. <a href="enlaces.html#2">Las URLs</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">6.3. <a href="enlaces.html#3">Anclas</a></font>
-<br>7. <a href="listas.html">Listas</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">7.1. <a href="listas.html#1">Listas ordenadas</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">7.2. <a href="listas.html#2">Listas desordenadas</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">7.3. <a href="listas.html#3">Listas de definiciones</a></font>
-<br>8. <a href="imagenes.html">Im&aacute;genes</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">8.1. <a href="imagenes.html#1">Im&aacute;genes y enlaces</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">8.2. <a href="imagenes.html#2">Alineaci&oacute;n respecto al texto</a></font>
-<br>9. <a href="font.html">Formateo fino</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">9.1. <a href="font.html#1">Cambio de color</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">9.2. <a href="font.html#2">Tama&ntilde;os del texto</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">9.3. <a href="font.html#3">Tipo de letra</a></font>
-<br>10. <a href="estructura.html">Estructura del documento</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">10.1. <a href="estructura.html#1">La cabecera</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">10.2. <a href="estructura.html#2">El cuerpo</a></font>
-<br>11. <a href="formularios.html">Formularios</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">11.1. <a href="formularios.html#1">Cajas de texto</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">11.2. <a href="formularios.html#2">Opciones</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">11.3. <a href="formularios.html#3">Botones del formulario</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">11.4. <a href="formularios.html#4">Otros elementos</a></font>
-<br>12. <a href="mapas.html">Mapas</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">12.1. <a href="mapas.html#1">Mapas gestionados por el cliente</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">12.2. <a href="mapas.html#2">C&oacute;mo usar un mapa</a></font>
-<br>13. <a href="tablas.html">Tablas</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">13.1. <a href="tablas.html#1">Definir las filas</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">13.2. <a href="tablas.html#2">Definir las celdas</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">13.3. <a href="tablas.html#3">T&iacute;tulo de la tabla</a></font>
-<br>14. <a href="marcos.html">Marcos</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">14.1. <a href="marcos.html#1">Etiqueta &lt;FRAMESET&gt;</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">14.2. <a href="marcos.html#2">Etiqueta &lt;FRAME&gt;</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">14.3. <a href="marcos.html#3">Acceso a otros marcos</a></font>
-<br>15. <a href="hojas.html">Hojas de estilo</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">15.1. <a href="hojas.html#1">Clases</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">15.2. <a href="hojas.html#2">Etiquetas &lt;SPAN&gt; y &lt;DIV&gt;</a></font>
-<br>16. <a href="refhojas.html">Hojas de estilo: referencia</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">16.1. <a href="refhojas.html#1">Propiedades de bloque</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">16.2. <a href="refhojas.html#2">Propiedades de tipo de letra</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">16.3. <a href="refhojas.html#3">Propiedades de formato del texto</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">16.4. <a href="refhojas.html#4">Propiedades de color y fondo</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">16.5. <a href="refhojas.html#5">Propiedades de clasificaci&oacute;n</a></font>
-<br>17. <a href="script.html">Lenguajes de script</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">17.1. <a href="script.html#1">Javascript</a></font>
-<br>18. <a href="capas.html">Capas</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">18.1. <a href="capas.html#1">Definici&oacute;n</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">18.2. <a href="capas.html#2">Propiedades</a></font>
-<br>19. <a href="sonido.html">Sonido</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">19.1. <a href="sonido.html#1">Sonido activado por el usuario</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">19.2. <a href="sonido.html#2">Sonido de fondo</a></font>
-<br>20. <a href="estilo.html">Gu&iacute;a de estilo</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">20.1. <a href="estilo.html#1">Contenido</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">20.2. <a href="estilo.html#2">Navegaci&oacute;n</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">20.3. <a href="estilo.html#3">Estructura de las p&aacute;ginas</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">20.4. <a href="estilo.html#4">Accesibilidad</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">20.5. <a href="estilo.html#5">Dise&ntilde;o</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">20.6. <a href="estilo.html#6">Mantenimiento y pruebas</a></font>
-<br>A. <a href="otros.html">Enlaces a otras p&aacute;ginas</a>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">A .1. <a href="otros.html#1">Otros manuales de HTML</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">A .2. <a href="otros.html#2">Sobre Javascript</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">A .3. <a href="otros.html#3">Sobre HTML din&aacute;mico</a></font>
-<br>
-&nbsp;&nbsp;&nbsp;<font size="-1">A .4. <a href="otros.html#4">Sobre otras tecnolog&iacute;as relacionadas</a></font>
-</p>
-<br>
-<br>
-<a name="3"></a><font size="+2" color="#005CA0">1.3. Agradecimientos</font>
-      <p>Aparte de dar las gracias a todos aquellos que visitan la web y
-      en especial a los que se toman la molestia de rellenar el formulario de
-      abajo, quiero agradecer especialmente desde aqu&iacute; a todos aquellos
-      que han colaborado en mejorar estas p&aacute;ginas. En especial a
-      Peter Promenade, por indicarme la nueva manera de justificar el texto
-      en HTML 4.0 y a Juan Jos&eacute; Nuevo, por ayudarme con el sonido.</p>
-    <br>
-<br>
-        
-    <img src="graficos/linea.gif" height="1" width="590">
-<table cellspacing="0" cellpadding="0" border="0" width="100%">
-<tr>
-<td align="right"><font size="-1" face="Arial,Helvetica,sans-serif">Versiones del HTML</font><a href="versiones.html"><img src="graficos/der.gif" align="MIDDLE" border="0"></a></td>
-</tr>
-</table>
-<font size="-1">
-<div align="center">&copy; 98-99 <a href="mailto:multivac@idecnet.com">Daniel
-    Rodr&iacute;guez</a>
-<br>
-<a href="index.html"><img src="graficos/loguito.gif" border="0"></a>
-</div>
-</font></font></td>
-</tr>
 </table>
 
 
-<h2>HTML Table</h2>
+<h2>Acceso directo a asesor</h2>
 
 <table>
   <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
+    <td>Contacto</td>
+    <td>Oscar Ardila</td>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>Ubicacion</td>
+    <td>Carrera 27 46 55 Bogota</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td>Telefono</td>
+    <td>318-3121344</td>
   </tr>
   <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
-  </tr>
-  <tr>
-    <td>Island Trading</td>
-    <td>Helen Bennett</td>
-    <td>UK</td>
-  </tr>
-  <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
-  </tr>
-  <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
-    <td>Italy</td>
+    <th>URL</th>
+    <th>https://oardilaaucentral.github.io/PrestamoConfiable/</th>
   </tr>
 </table>
 
